test/should-fail/jfxc3994sub.visage
/**
 * @subtest jfxc3994.visage
 */

public class jfxc3994sub {
   public var x;
}
